--- a/style.css
+++ b/style.css
@@ -25,14 +25,14 @@
     border-radius: 10px;
     color: #333;
     background-color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 10px rgba(12, 77, 36, 0.521);
 }
 
 h3 {
     margin-top: 0;
 }
 
-.stTextInput input[aria-label="Enter your postal code"]{
+.st-bo{
     background-color: white !important;
 }
 
